--- a/src/components/Examples/example-list.module.css
+++ b/src/components/Examples/example-list.module.css
@@ -1,13 +1,18 @@
 /* center container in the middle */
 
 .wrapper {
-  margin: auto;
-  max-width: 1200px;
+  max-width: 1600px;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
   gap: 25px;
   list-style: none;
-}
+}   
+@media screen and (min-width : 1200px) {
+  .wrapper{
+    grid-template-columns: auto auto auto;
+  }
+}    
+
 
 .container {
   display: grid;
@@ -18,7 +23,7 @@
   overflow: hidden;
   width: 380px;
   height: 125px;
-  background: #F5F5F5;
+  background: #f5f5f5;
   border-radius: 5px;
   text-decoration: none;
 }
@@ -33,8 +38,9 @@
   margin-left: 15px;
 }
 
-.pageHeading {
-  margin: 2rem;
+.header {
+  margin-left: 2rem;
+  margin-top: 1rem;
 }
 
 .buttonImg {
@@ -43,7 +49,7 @@
 }
 
 .button {
-  background: darken(#F5F5F5, 10%);
+  background: darken(#f5f5f5, 10%);
   margin-top: 8px;
   padding: 2px 12px 2px 12px;
   cursor: pointer;
